Object initialize memory allocate space